Got rid of responsiveness issues
Used flexbox, relative positions, and percent-/auto-based widths to prevent elements from overflowing the viewport width.

--- a/design.css
+++ b/design.css
@@ -1,35 +1,39 @@
-body.design {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-}
-h1.design__heading {
-  position: absolute;
-  color: #fff;
-  font-family: sans-serif;
-  text-align: center;
-  margin: auto;
-  text-transform: uppercase;
-  width: 90%;
-  padding: 100px;
-  font-size: 50px;
-}
-h4.design__subheading {
-  position: absolute;
-  color: #fff;
-  font-family: sans-serif;
-  text-align: center;
-  margin: auto;
-  text-transform: uppercase;
-  width: 90%;
-  padding: 90px;
-  font-size: 10px;
-}
 #particles-js {
+  position: absolute;
+  width: 100%;
   height: 100%;
+}
+body.design {
   background-image: url("cbh2.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  display: flex;
+  flex-flow: column nowrap;
+  width: 100%;
+}
+h1.design__heading {
+  position: relative;
+  flex-flow: row nowrap;
+  color: #fff;
+  font-family: sans-serif;
+  margin: 0 0 0 0;
+  text-transform: uppercase;
+  width: auto;
+}
+h4.design__subheading {
+  position: relative;
+  color: #fff;
+  font-family: sans-serif;
+  text-align: center;
+  margin: auto;
+  width: auto;
+  text-transform: uppercase;
+  font-size: 10px;
+}
+.design__jumbotron {
+  position: relative;
+  min-width: 100px;
+  min-height: 100px;
 }
 .design__menu-icon {
   position: fixed;
