--- a/main.css
+++ b/main.css
@@ -1,9 +1,8 @@
 
 body {
-
   margin: 0;
   padding: 0;
-  height: 100vh;
+  min-height: 100vh;
 }
 h1
 {
